# ailab

./: .gitignore  README.md  pyproject.toml
autorotate/: .gitignore  main.py  requirements.txt
booth/: .gitignore  package.json  pnpm-lock.yaml  position.js  tensor-coco.js
excel/: .gitignore  README.md  download_images.py  extract.py  extract2.py  extract_images2.py  extract_sheet_images.py  generate_excel_from_json.py  requirements.txt  train.py
extractimg/: .gitignore  main.py
invert/: main.py
llama/: Makefile
llama/models/GLM-OCR-bf16/: README.md  chat_template.jinja  (+6 more)
llmres/: .gitignore  DOWNLOAD_GUIDE.md  Makefile  PLAN.md  README.md  README_MLX.md  check_mlx.py  download_datasets.py  download_utils.py  infer.py  infer_mlx.py  requirements.txt  test.jsonl  test_vision.py  train.py  valid.jsonl
llmres/adapters/: adapter_config.json  adapters.safetensors
llmres/data/: test.jsonl  train.jsonl  valid.jsonl
qr/: README.md  index.html  pyproject.toml
receipt/: Makefile  go.mod  go.sum  main.go
removebg/: .gitignore  main.py  requirements.txt
removetext/: keras.py  main.py  requirements.txt
scale/: requirements.txt  super.py
sitemap/: crawl.py
textract/: mu.py  requirements.txt
transcript/: .gitignore  Makefile  README.md  assembly.py  google.py  google2.py  main.py  malaysia.py  mkv_wav.py  nemotron.py  openai2.py  openai3.py  openai5.py  openai6.py  openai7.py  openai_fix.py  openaitest.py  parakeet_api.py  parakeet_transcribe.py  print_env.py  pyproject.toml  requirements.txt  time_util.py  video.py  video2.py
wedding/: main.py
(+1 files in other folders)
