[project]
name = "transcript"
version = "0.1.0"
description = "Audio transcription scripts with various ASR models"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
parakeet = [
    "parakeet-mlx>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
]
google = [
    "google-cloud-speech>=2.21.0",
]
diarization = [
    "pyannote.audio>=3.0.0",
]
nemotron = [
    "Cython",
    "packaging",
]
dev = [
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
